# esp32-idf-hwcheck

./: Cargo.toml  LICENSE  README.md  build.rs  cfg.toml
.cargo/: config.toml
src/: led.rs  main.rs
