[package]
name = "esp32-idf-hwcheck"
version = "0.1.0"
authors = ["zipfried <richardzipfried@gmail.com>"]
edition = "2021"
resolver = "2"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true
opt-level = "z"

[dependencies]
esp-idf-hal = "0.41"
esp-idf-sys = { version = "0.33", features = ["binstart"] }
esp-idf-svc = { version = "0.46", features = ["alloc", "experimental"] }
embedded-svc = "0.25.3"

log = "0.4.20"
anyhow = "1.0.72"
toml-cfg = "0.1.3"

rgb = "0.8.36"

[build-dependencies]
embuild = "0.31.2"

anyhow = "1.0.72"
toml-cfg = "0.1.3"
